--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csurf": "^1.11.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "mysql2": "^3.13.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   }
