--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "vercel-start": "node server.js"
+    "vercel-start": "node server.js",
+    "postinstall": "npm list mysql2"
   },
   "keywords": [],
   "author": "",
