--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
-  "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "server.js" }]
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "scripts": {
+      "build": "npm install && npm run start" 
+    }
+  }
 }
