--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,6 @@
     "env": {
       "NODE_ENV": "production"
     },
-    "scripts": {
-      "build": "npm install && npm run start" 
-    }
+    "command": "npm install && npm run start"
   }
 }
