--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
   "build": {
     "env": {
       "NODE_ENV": "production"
-    },
-    "command": "npm install && npm run start"
+    }
+  },
+  "scripts": {
+    "build": "npm install && npm run start"
   }
 }
