--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "vercel-start": "node server.js",
-    "postinstall": "npm list mysql2"
-  },
+  "start": "node server.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
